kubernetes/darkstar/apps/media/tvheadend/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app tvheadend
  labels:
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: ${IP_ADDR_LAN_GRAVITY}
  ports:
    - name: http
      port: &port 9981
      protocol: TCP
      targetPort: *port
