kubernetes/darkstar/apps/media/tvheadend/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app tvheadend
  labels:
    app.kubernetes.io/instance: *app
    annotations:
      nginx.ingress.kubernetes.io/configuration-snippet: |
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        send_timeout 100m;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: ingress-nginx-int
  rules:
    - host: &host "tvheadend.${SECRET_DOMAIN_PROXY}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9981
  tls:
    - hosts:
        - *host
